commit testData sql creat table